--- a/styles/main.css
+++ b/styles/main.css
@@ -223,20 +223,186 @@ h3 {
   max-width: 100%;
 }
 
+.atelier-s img:hover{
+  filter:alpha(opacity=50);
+             			-moz-opacity: 0.5;
+             			opacity: 0.75;
+}
+
+.atelier-s{
+  text-align: center;
+   display: inline-block;
+}
+
+.atelier-s:hover p {
+    opacity: 1;
+      color: #936c39;
+}
+
+.atelier-s p {
+opacity: 0;
+vertical-align: middle;
+-webkit-transition: opacity .5s ease-in-out;
+-moz-transition: opacity .5s ease-in-out;
+-o-transition: opacity .5s ease-in-out;
+-ms-transition: opacity .5s ease-in-out;
+position: relative;
+top: -10em;
+left: 25%;
+font-family: couture-sans, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 3em;
+color: #936c39;
+}
+
 .agatha img {
   max-width: 100%;
+}
+
+
+.agatha img:hover{
+  filter:alpha(opacity=50);
+             			-moz-opacity: 0.25;
+             			opacity: 0.75;
+}
+
+.agatha{
+  text-align: center;
+   display: inline-block;
+}
+
+.agatha:hover p {
+    opacity: 1;
+      color: #ffff;
+}
+
+.agatha p {
+opacity: 0;
+vertical-align: middle;
+-webkit-transition: opacity .5s ease-in-out;
+-moz-transition: opacity .5s ease-in-out;
+-o-transition: opacity .5s ease-in-out;
+-ms-transition: opacity .5s ease-in-out;
+position: relative;
+top: -10em;
+left: -15%;
+font-family: couture-sans, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 3em;
+color: #ffff;
 }
 
 .linocut img {
   max-width: 100%;
 }
 
+.linocut img:hover{
+  filter:alpha(opacity=50);
+             			-moz-opacity: 0.25;
+             			opacity: 0.75;
+}
+
+.linocut{
+  text-align: center;
+   display: inline-block;
+}
+
+.linocut:hover p {
+    opacity: 1;
+      color: #a04c58;
+}
+
+.linocut p {
+opacity: 0;
+vertical-align: middle;
+-webkit-transition: opacity .5s ease-in-out;
+-moz-transition: opacity .5s ease-in-out;
+-o-transition: opacity .5s ease-in-out;
+-ms-transition: opacity .5s ease-in-out;
+position: relative;
+top: -100%;
+left: 0%;
+font-family: couture-sans, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 3em;
+color: #a04c58;
+}
+
 .flatdesign img {
   max-width: 100%;
 }
 
+.flatdesign img:hover{
+  filter:alpha(opacity=50);
+             			-moz-opacity: 0.25;
+             			opacity: 0.75;
+}
+
+.flatdesign{
+  text-align: center;
+   display: inline-block;
+}
+
+.flatdesign:hover p {
+    opacity: 1;
+      color: #ffff;
+}
+
+.flatdesign p {
+opacity: 0;
+vertical-align: middle;
+-webkit-transition: opacity .5s ease-in-out;
+-moz-transition: opacity .5s ease-in-out;
+-o-transition: opacity .5s ease-in-out;
+-ms-transition: opacity .5s ease-in-out;
+position: relative;
+top: -10em;
+left: -15%;
+font-family: couture-sans, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 3em;
+color: #ffff;
+}
+
 .carson img {
   max-width: 100%;
+}
+
+.carson img:hover{
+  filter:alpha(opacity=50);
+             			-moz-opacity: 0.25;
+             			opacity: 0.75;
+}
+
+.carson{
+  text-align: center;
+   display: inline-block;
+}
+
+.carson:hover p {
+    opacity: 1;
+      color: #ffff;
+}
+
+.carson p {
+opacity: 0;
+vertical-align: middle;
+-webkit-transition: opacity .5s ease-in-out;
+-moz-transition: opacity .5s ease-in-out;
+-o-transition: opacity .5s ease-in-out;
+-ms-transition: opacity .5s ease-in-out;
+position: relative;
+top: -10em;
+left: -15%;
+font-family: couture-sans, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: 3em;
+color: #ffff;
 }
 
 .img-grid-4 {
@@ -390,6 +556,42 @@ h3 {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
+}
+
+/*flatdesign*/
+.img-flatdesign img {
+  width: 100%;
+}
+.text-4 {
+  font-family: couture-sans, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2em;
+  color: #936c39;
+}
+
+.text-4 p {
+  background-color: white;
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+
+/*carson*/
+.img-carson img {
+  width: 100%;
+}
+.text-5 {
+  font-family: couture-sans, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2em;
+  color: #936c39;
+}
+
+.text-5 p {
+  background-color: white;
+  padding-top: 4%;
+  padding-bottom: 4%;
 }
 
 /*lines*/
@@ -696,6 +898,36 @@ h3 {
     grid-row: 4;
     padding-left: 1em;
   }
+  /*flatdesign*/
+  .img-flatdesign {
+    grid-column: 2 / 8;
+    grid-row: 5;
+  }
+  .text-4 {
+    grid-column: 2 / 8;
+    grid-row: 14;
+    padding-left: 0;
+  }
+  /*carson*/
+  .img-carson {
+    grid-column: 3 / 7;
+    grid-row: 6;
+  }
+  .text-5 {
+    grid-column: 3 / 7;
+    grid-row: 14;
+    padding-left: 0;
+  }
+  /*carson*/
+  .img-carson {
+    grid-column: 2 / 8;
+    grid-row: 6;
+  }
+  .text-5 {
+    grid-column: 2 / 8;
+    grid-row: 12;
+    padding-left: 0;
+  }
   /*lines*/
   .line_1{
     grid-column: 2;
@@ -962,6 +1194,26 @@ h3 {
     grid-row: 5;
     padding-left: 1em;
   }
+  /*flatdesign*/
+  .img-flatdesign {
+    grid-column: 3 / 7;
+    grid-row: 5;
+  }
+  .text-4 {
+    grid-column: 3 / 7;
+    grid-row: 13;
+    padding-left: 0;
+  }
+  /*carson*/
+  .img-carson {
+    grid-column: 2 / 8;
+    grid-row: 6;
+  }
+  .text-5 {
+    grid-column: 3 / 7;
+    grid-row: 14;
+    padding-left: 0;
+  }
   /*lines*/
   .line_1{
     grid-column: 2;
@@ -1220,6 +1472,26 @@ h3 {
   .text-3 {
     grid-column: 6 / 8;
     grid-row: 6;
+    padding-left: 0;
+  }
+  /*flatdesign*/
+  .img-flatdesign {
+    grid-column: 2 / 5;
+    grid-row: 6;
+  }
+  .text-4 {
+    grid-column: 6 / 8;
+    grid-row: 7;
+    padding-left: 0;
+  }
+  /*carson*/
+  .img-carson {
+    grid-column: 3 / 7;
+    grid-row: 6;
+  }
+  .text-5 {
+    grid-column: 3 / 7;
+    grid-row: 14;
     padding-left: 0;
   }
   /*lines*/
@@ -1485,6 +1757,26 @@ h3 {
   .text-3 {
     grid-column: 6 / 8;
     grid-row: 7;
+    padding-left: 0;
+  }
+  /*flatdesign*/
+  .img-flatdesign {
+    grid-column: 2 / 5;
+    grid-row: 6;
+  }
+  .text-4 {
+    grid-column: 6 / 8;
+    grid-row: 7;
+    padding-left: 0;
+  }
+  /*carson*/
+  .img-carson {
+    grid-column: 3 / 7;
+    grid-row: 6;
+  }
+  .text-5 {
+    grid-column: 3 / 7;
+    grid-row: 14;
     padding-left: 0;
   }
   /*lines*/
